--- a/style/popup.css
+++ b/style/popup.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
@@ -11,11 +11,14 @@
 }
 
 .popup__modal {
-    background: #fff;
-    width: 60%;
+    /* background: #d; */
+    /* opacity: .1; */
+    /* width: 60%; */
+    /* width: 650px; */
     padding: 20px;
     box-sizing: border-box;
     position: relative;
+    display: flex;
 }
 
 .popup__close {
@@ -37,8 +40,40 @@
 .popup__close:hover{
     opacity: 1;
 }
-
-.popup__content {}
+.popup__content{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 600px;
+}
+.popup__content button{
+    opacity: .4;
+    width: 70px;
+    height: 50px;
+    border: 2px solid #D5621D;
+    border-radius: 5px;
+    box-sizing: border-box;
+    margin: 0 15px;
+    background: transparent;
+    font-family: 'Stolzl';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+.popup__content button:hover{
+    opacity: 1;
+    transition: .1s;
+    background-color: #D5621D;
+}
+.popup__content img{
+    /* width: 600px; */
+    /* height: 600px; */
+    height: 100%;
+}
 
 .hide-element{
     display: none;
