--- a/style/popup.css
+++ b/style/popup.css
@@ -78,3 +78,90 @@
 .hide-element{
     display: none;
 }
+
+@media (max-width: 1280px){
+    .popup__content img{
+        height: 80%;
+    }
+    .popup__close{
+        right: 30px;
+        top: 50px;
+    }
+}
+@media (max-width: 1024px){
+    .popup__content img{
+        height: 60%;
+    }
+    .popup__close{
+        top: 100px;
+    }
+    
+}
+
+@media (max-width: 800px){
+    .popup__content button{
+        width: 50px;
+        font-size: 10px;
+    }
+    .popup__content img{
+        height: 45%;
+    }
+    .popup__close{
+        top: 150px;
+    }
+}
+@media (max-width: 675px){
+    .popup__content img{
+        height: 35%;
+    }
+    .popup__close{
+        top: 150px;
+    }
+}
+@media (max-width: 600px){
+    .popup__content img{
+        width: 340px;
+        height: auto;
+    }
+   
+    .popup__close{
+        /* width: 25px; */
+        right: 40px;
+        top: 200px;
+        width: 25px;
+        height: 25px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 15px;
+    }
+    .popup__content button{
+        transform: rotate(-90deg);
+        width: 50px;
+        height: 20px;
+        font-size: 10px;
+        margin: 0;
+    }
+    .popup__content button:last-child{
+        transform: rotate(90deg);
+    }
+}
+@media (max-width: 425px){
+    .popup__content img{
+        width: 300px;
+    }
+}
+@media (max-width: 375px){
+    .popup__content img{
+        width: 260px;
+    }
+}
+
+
+@media (max-width: 350px){
+   
+    .popup__content img{
+        width: 240px;
+    }
+    
+}
