--- a/style/style.css
+++ b/style/style.css
@@ -6,15 +6,22 @@
     font-family: 'Stolzl';
     src: url(../fonts/ofont.ru_Stolzl.ttf);
 }
+body._lock{
+    overflow: hidden;
+}
 *{
     padding: 0;
     margin: 0;
     list-style: none;
+    position: relative;
+    z-index: 1;
 }
+
 .app{margin: 0 auto;
     max-width: 1920px;
     width: 100%;
     background: #210E09;
+    overflow: hidden;
 
 }
 .header{
@@ -23,6 +30,9 @@
     margin: 0 auto;
     padding-top: 36px;
     padding-bottom: 53px;
+    position: relative;
+   
+    z-index: 10;
 }
 .header__container{
     display: flex;
@@ -37,6 +47,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+.menu__icon {
+    display: none;
 }
 .nav{
     max-width: 559px;
@@ -135,7 +148,82 @@
     color: #FFFFFF;
 }
 
+.booking{
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    background-color: #210E09;
+    opacity: .98;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: auto;
+}
+.booking__close{
+    position: absolute;
+    font-size: 30px;
+    line-height: 40px;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    border: 1px solid #00000042;
+    border-radius: 50%;
+    top: -30px;
+    right: -50px;
+    opacity: .3;
+    cursor: pointer;
+    transition: .3s;
+    background: #fff;
+}
+.content form{
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 500px;
+    width: 100%;
+    border: 2px solid #D5621D;
+    border-radius: 5px;
+}
+.content form input{
+    width: 400px;
+    height: 50px;
+    margin: 20px 15px;
 
+    font-family: 'Gotham Pro';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 150%;
+    text-align: center;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: #210E09;
+    padding: 10px 17px 7px 17px;
+}
+.content form button{
+    max-width: 188px;
+    width: 100%;
+    height: 51px;
+    box-sizing: border-box;
+    border: 2px solid #D5621D;
+    border-radius: 5px;
+    background-color: transparent;
+    cursor: pointer;
+
+    font-family: 'Stolzl';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    margin-bottom: 10px;
+}
 
 @media (max-width: 1280px){
     .header__container__block{
@@ -162,5 +250,163 @@
     .heading h3{
         padding-top: 20px;
         font-size: 3 5px;
+    }
+}
+@media (max-width: 1024px){
+    
+    .header__container__logo, .header__btn{
+        position: relative;
+        z-index: 6;
+    }
+    .header__container__block{
+        padding-right: 10px;
+        flex-direction: row-reverse;
+    }
+    .menu__icon{
+        z-index: 5;
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 18px;
+        cursor: pointer;
+        margin-right: 10px;
+    }
+    
+    .menu__icon span, 
+    .menu__icon::before, 
+    .menu__icon::after{
+        left: 0;
+        position: absolute;
+        height: 10%;
+        width: 100%;
+        transition: all .3s ease 0s;
+        background-color: #D5621D;
+    }
+    .menu__icon::before, 
+    .menu__icon::after{
+        content: '';
+    }
+    .menu__icon::before{
+        top: 0;
+    }
+    .menu__icon::after{
+        bottom: 0;
+    }
+    .menu__icon span{
+        top: 50%;
+        transform: scale(1) translate(0px, -50%);
+    }
+    .menu__icon._active span{
+        transform: scale(0) translate(0px, -50%);
+    }
+    .menu__icon._active::before{
+        top: 50%;
+        transform: rotate(-45deg) translate(0px, -50%);
+    }
+    .menu__icon._active::after{
+        bottom: 50%;
+        transform: rotate(45deg) translate(0px, 50%);
+    }
+    .nav{
+        position: fixed;
+        top: 0;
+        left: -100%;
+        max-width: 100%;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.9);
+        transform: translate(-100%, 0px);
+        transition: left 0.3s ease 0s;
+        padding: 100px 30px 30px 30px;
+        
+    }
+    .nav._active{
+        left: 100%;
+    }
+    .nav::before{
+        content: '';
+        position: fixed;
+        width: 100%;
+        top: 0;
+        right: 0;
+        height: 140px;
+        background-color: #210E09;
+        z-index: 2;
+    }
+    .nav ul{
+        flex-direction: column;
+       
+    }
+    .nav ul li {
+        margin-bottom: 30px;
+        
+    }
+    .nav ul li:last-child{
+        margin-bottom: 0;
+    }
+    .nav ul li a{
+        font-size: 24px;
+    }
+}
+@media (max-width: 600px){
+    .booking__close{
+        width: 25px;
+        height: 25px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .content form input{
+        width: 300px;
+        height: 40px;
+        margin: 20px 15px;
+    }
+}
+@media (max-width: 550px){
+    .header__container__block{
+        padding-left: 50px;
+    }
+    .header__btn{
+        max-width: 140px;
+    }
+    .header__btn span{
+        padding: 5px;
+        font-size: 11px;
+    }
+}
+@media (max-width: 490px){
+    .booking__close{
+        right: -20px;
+    }
+    .content form input{
+        width: 220px;
+        height: 40px;
+        margin: 20px 15px;
+    }
+}
+@media (max-width: 430px){
+    .header__container{
+        flex-direction: column;
+        align-items: center;
+    }
+    .header__container__block{
+        max-width: 80%;
+        padding-top: 20px;
+    }
+    .nav ul {
+        padding-top: 25px;
+    }
+    .nav ul li a{
+        font-size: 18px;
+    }
+    .nav::before {
+        height: 165px;
+    }
+
+    .content form input{
+        width: 200px;
+        height: 30px;
+        margin: 10px 10px;
+        padding: 5px 10px;
     }
 }
