--- a/style/popup.css
+++ b/style/popup.css
@@ -47,6 +47,7 @@
     justify-content: space-between;
     height: 600px;
 }
+
 .popup__content button{
     opacity: .4;
     width: 70px;
@@ -71,9 +72,9 @@
     background-color: #D5621D;
 }
 .popup__content img{
-    /* width: 600px; */
+    width: 750px;
     /* height: 600px; */
-    height: 100%;
+    /* height: 100%; */
 }
 
 .hide-element{
@@ -91,7 +92,7 @@
 }
 @media (max-width: 1024px){
     .popup__content img{
-        height: 60%;
+        width: 600px;
     }
     .popup__close{
         top: 100px;
@@ -105,7 +106,7 @@
         font-size: 10px;
     }
     .popup__content img{
-        height: 45%;
+        width: 450px;
     }
     .popup__close{
         top: 150px;
