--- a/style/style.css
+++ b/style/style.css
@@ -249,7 +249,7 @@ body._lock{
     }
     .heading h3{
         padding-top: 20px;
-        font-size: 3 5px;
+        font-size: 35px;
     }
 }
 @media (max-width: 1024px){
